Closed
Bug 1394695
Opened 5 years ago
Closed 5 years ago
Assertion failure: metadata, at /builds/worker/workspace/build/src/gfx/layers/wr/ScrollingLayersHelper.cpp:151
Categories
(Core :: Graphics: WebRender, defect, P1)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
mozilla57
Tracking | Status | |
---|---|---|
firefox56 | --- | unaffected |
firefox57 | --- | unaffected |
People
(Reporter: pchang, Assigned: kats)
References
Details
(Whiteboard: [wr-mvp])
Attachments
(1 file)
Hit assertion in layers-free try run [Try] Linux x64 QuantumRender debug R4 https://treeherder.mozilla.org/#/jobs?repo=try&author=ethlin@mozilla.com&selectedJob=126634594 [Log] https://public-artifacts.taskcluster.net/J110wDoaRlGokzUr4Xf6hw/0/public/logs/live_backing.log [task 2017-08-29T04:35:11.738020Z] 04:35:11 INFO - Assertion failure: metadata, at /builds/worker/workspace/build/src/gfx/layers/wr/ScrollingLayersHelper.cpp:151 [task 2017-08-29T04:35:11.738353Z] 04:35:11 INFO - #01: mozilla::layers::ScrollingLayersHelper::ScrollingLayersHelper [gfx/layers/wr/ScrollingLayersHelper.cpp:120] [task 2017-08-29T04:35:11.739462Z] 04:35:11 INFO - [task 2017-08-29T04:35:11.743158Z] 04:35:11 INFO - #02: mozilla::layers::WebRenderLayerManager::CreateWebRenderCommandsFromDisplayList [gfx/layers/wr/WebRenderLayerManager.cpp:331] [task 2017-08-29T04:35:11.743216Z] 04:35:11 INFO - [task 2017-08-29T04:35:11.748715Z] 04:35:11 INFO - #03: mozilla::layers::WebRenderLayerManager::EndTransactionInternal [gfx/layers/wr/WebRenderLayerManager.cpp:720] [task 2017-08-29T04:35:11.749359Z] 04:35:11 INFO - [task 2017-08-29T04:35:11.750231Z] 04:35:11 INFO - #04: nsDisplayList::PaintRoot [layout/painting/nsDisplayList.cpp:2128] [task 2017-08-29T04:35:11.750951Z] 04:35:11 INFO - [task 2017-08-29T04:35:11.752871Z] 04:35:11 INFO - #05: nsLayoutUtils::PaintFrame [mfbt/RefPtr.h:130] [task 2017-08-29T04:35:11.752922Z] 04:35:11 INFO - [task 2017-08-29T04:35:11.753038Z] 04:35:11 INFO - #06: mozilla::PresShell::Paint [layout/base/PresShell.cpp:6457] [task 2017-08-29T04:35:11.753528Z] 04:35:11 INFO - [task 2017-08-29T04:35:11.754364Z] 04:35:11 INFO - #07: nsViewManager::ProcessPendingUpdatesPaint [gfx/src/nsRegion.h:75] [task 2017-08-29T04:35:11.755144Z] 04:35:11 INFO - [task 2017-08-29T04:35:11.756581Z] 04:35:11 INFO - #08: nsViewManager::ProcessPendingUpdatesForView [view/nsViewManager.cpp:408] [task 2017-08-29T04:35:11.757337Z] 04:35:11 INFO - [task 2017-08-29T04:35:11.758239Z] 04:35:11 INFO - #09: nsViewManager::ProcessPendingUpdates [view/nsViewManager.cpp:1090] [task 2017-08-29T04:35:11.759341Z] 04:35:11 INFO - [task 2017-08-29T04:35:11.760336Z] 04:35:11 INFO - #10: nsRefreshDriver::Tick [layout/base/nsRefreshDriver.cpp:2081] [task 2017-08-29T04:35:11.761111Z] 04:35:11 INFO - [task 2017-08-29T04:35:11.762100Z] 04:35:11 INFO - #11: mozilla::RefreshDriverTimer::TickRefreshDrivers [layout/base/nsRefreshDriver.cpp:309]
Reporter | ||
Comment 1•5 years ago
|
||
BTW, this try run had disabled apz by default.
Assignee | ||
Comment 2•5 years ago
|
||
(In reply to Peter Chang[:pchang] from comment #1) > BTW, this try run had disabled apz by default. This is probably why, I probably didn't properly handle the case where APZ is disabled. Should be an easy fix, I'll look into it.
Assignee: nobody → bugmail
Updated•5 years ago
|
Blocks: stage-wr-nightly
Updated•5 years ago
|
Priority: -- → P3
Updated•5 years ago
|
Status: NEW → ASSIGNED
Priority: P3 → P1
Whiteboard: [wr-mvp]
Target Milestone: --- → mozilla57
Updated•5 years ago
|
Comment hidden (mozreview-request) |
Assignee | ||
Comment 4•5 years ago
|
||
Try push without this patch (layers-free, APZ off): https://treeherder.mozilla.org/#/jobs?repo=try&revision=692a63711b8fcf14b0e61a7e0b3d37aea4b525fe The R1 debug shows some assertion failures for `MOZ_ASSERT(metadata)` Corresponding try push with this patch: https://treeherder.mozilla.org/#/jobs?repo=try&revision=6dee36c236749a7fbc8b8de6a5232bbc079ec44a R1 still failing, but just regular reftest failures instead of assertion failures.
Comment 5•5 years ago
|
||
mozreview-review |
Comment on attachment 8907082 [details] Bug 1394695 - Don't push scrolling clips in layers-free WR if APZ is disabled. https://reviewboard.mozilla.org/r/178794/#review183818 ::: commit-message-f9a5e:1 (Diff revision 1) > +Bug 1394695 - Don't push scrolling clips in layers-free WR if APZ is enabled. r?mstange s/enabled/disabled/, I think.
Attachment #8907082 -
Flags: review?(mstange) → review+
Assignee | ||
Comment 6•5 years ago
|
||
(In reply to Markus Stange [:mstange] from comment #5) > s/enabled/disabled/, I think. Good catch, fixed.
Comment hidden (mozreview-request) |
Pushed by kgupta@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fd8dd47003bc Don't push scrolling clips in layers-free WR if APZ is disabled. r=mstange
![]() |
||
Comment 10•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/fd8dd47003bc
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•