Bug 1394695 - Don't push scrolling clips in layers-free WR if APZ is disabled. r=mstange

MozReview-Commit-ID: AesXui61mB2